auth guard | change navbar | logout

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,6 +9,11 @@
   font-size: 40px;
 }
 
+.nav h1 a {
+  color: blueviolet;
+  text-decoration: none;
+}
+
 .nav .nav-search {
   margin-top: 5px;
   flex: 1;
