--- a/src/app/seller-auth/seller-auth.component.css
+++ b/src/app/seller-auth/seller-auth.component.css
@@ -1,9 +1,21 @@
-.sign-up {
+.sign-up, .login {
   text-align: center;
   color: blueviolet;
 }
 
-.sign-up h1 {
+.sign-up h1, .login h1 {
   margin-top: 80px;
   margin-bottom: 50px;
+}
+
+.auth-toggle-link {
+  margin-top: 20px;
+  color: blueviolet;
+  font-size: 14px;
+  text-align: left;
+  cursor: pointer;
+}
+
+.error-p {
+  color: red;
 }
