--- a/src/app/seller-add-product/seller-add-product.component.html
+++ b/src/app/seller-add-product/seller-add-product.component.html
@@ -1,1 +1,14 @@
-<p>seller-add-product works!</p>
+<div class="add-product">
+  <h1>Add New Product</h1>
+  <p class="messege-p">{{addProductMessege}}</p>
+  <form #addProduct="ngForm" (ngSubmit)="submit(addProduct.value)" class="common-form">
+    <input class="form-input" type="text" ngModel name="name" placeholder="Enter Product Name">
+    <input class="form-input" type="text" ngModel name="price" placeholder="Enter Product Price">
+    <input class="form-input" type="text" ngModel name="color" placeholder="Enter Product Color">
+    <input class="form-input" type="text" ngModel name="categery" placeholder="Enter Product Categery">
+    <textarea class="form-input" type="text" ngModel name="description"
+      placeholder="Enter Product Description"></textarea>
+    <input class="form-input" type="text" ngModel name="image" placeholder="Enter Product Image">
+    <button class="form-button">Add Product</button>
+  </form>
+</div>
