--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -1,1 +1,31 @@
-<p>seller-home works!</p>
+<div class="product-list">
+  <h1>Product List</h1>
+  <p class="messege-p">{{productMessege}}</p>
+  <table>
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Color</th>
+        <th>Categery</th>
+        <th>Description</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of  productList">
+        <td><img src="{{item.image}}" alt="product image"></td>
+        <td>{{item.name}}</td>
+        <td>{{item.price}}</td>
+        <td>{{item.color}}</td>
+        <td>{{item.categery}}</td>
+        <td>{{item.description}}</td>
+        <td>
+          <fa-icon (click)="deleteProduct(item.id)" [icon]="icon"></fa-icon>
+        </td>
+
+      </tr>
+    </tbody>
+  </table>
+</div>
