--- a/src/styles.css
+++ b/src/styles.css
@@ -27,5 +27,13 @@ body {
   height: 35px;
   border: 1px solid blueviolet;
   cursor: pointer;
+  color: blueviolet;
 }
 
+.error-p {
+  color: red;
+}
+
+.messege-p {
+  color: green;
+}
