update product done and redirect page done

--- a/src/app/seller-update-product/seller-update-product.component.html
+++ b/src/app/seller-update-product/seller-update-product.component.html
@@ -1,6 +1,6 @@
 <div class="update-product">
   <h1>Update Product</h1>
-
+  <p class="messege-p">{{updateProductMessage}}</p>
   <form #addProduct="ngForm" (ngSubmit)="submit(addProduct.value)" class="common-form">
     <input class="form-input" type="text" ngModel="{{productData?.name}}" name="name" placeholder="Enter Product Name">
     <input class="form-input" type="text" ngModel="{{productData?.price}}" name="price"
