--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,37 @@
-<p>home works!</p>
+<ngb-carousel *ngIf="popularProduct">
+  <ng-template *ngFor="let item of popularProduct" ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img class="product-header-img" src="{{item.image}}" alt="Random first slide" />
+    </div>
+    <div class="carousel-caption">
+      <h3>{{item.name}}</h3>
+      <p>{{item.description}}</p>
+    </div>
+  </ng-template>
+</ngb-carousel>
+
+<!-- ---------------------------------------------------------------- -->
+
+<div class="product-list-wrapper">
+  <h1>Trendy Products</h1>
+  <div class="row">
+    <div class="col-sm-3" *ngFor="let item of trendyProductArray">
+      <div class="product-item">
+        <img src="{{item.image}}" alt="" srcset="" />
+        <div class="product-details">
+          <h6 class="name-head">{{item.name}}</h6>
+          <div class="product-price">
+            <h6>Price: {{item.price}}</h6>
+          </div>
+          <div class="product-color">
+            <h6>Color: {{item.color}}</h6>
+          </div>
+        </div>
+        <div class="product-footer">
+          <a href="">View Details</a>
+          <a href="">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
