--- a/src/app/seller-auth/seller-auth.component.css
+++ b/src/app/seller-auth/seller-auth.component.css
@@ -1,9 +1,11 @@
-.sign-up, .login {
+.sign-up,
+.login {
   text-align: center;
   color: blueviolet;
 }
 
-.sign-up h1, .login h1 {
+.sign-up h1,
+.login h1 {
   margin-top: 80px;
   margin-bottom: 50px;
 }
@@ -16,4 +18,6 @@
   cursor: pointer;
 }
 
-
+a {
+  text-decoration: none;
+}
