--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -8,7 +8,7 @@
       <input class="form-input" type="password" ngModel name="password" placeholder="Enter Password">
       <input class="form-input" type="text" ngModel name="email" placeholder="Enter Email">
       <button class="form-button">Sign-up</button>
-      <a class="auth-toggle-link" (click)="openLogin()">Aready Have Account? Click to Login </a>
+      <a class="auth-toggle-link" (click)="openLogin()">Already Have Account? Click to Login </a>
     </form>
   </div>
   <!-- seller login area -->
