--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@ body {
 .container {
   margin-left: 5%;
   margin-right: 5%;
+  margin-top: 1%;
 }
 
 .common-form {
@@ -36,4 +37,14 @@ body {
 
 .messege-p {
   color: green;
+}
+
+.carousel-caption{
+  background-color: rgba(0, 0, 0, 0.418);
+  border-radius: 5px;
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon{
+  background-color: black;
+  border-radius: 5px;
 }
